lab3-src/y.output
Terminals unused in grammar

   NOTOKEN


State 10 conflicts: 5 shift/reduce


Grammar

    0 $accept: goal $end

    1 goal: commands

    2 commands: command
    3         | commands command

    4 command: simple_command

    5 simple_command: pipe_list iomodifier_list background_opt NEWLINE
    6               | NEWLINE
    7               | error NEWLINE

    8 command_and_args: command_word argument_list

    9 argument_list: argument_list argument
   10              | /* empty */

   11 argument: WORD

   12 command_word: WORD

   13 iomodifier_list: iomodifier_list iomodifier_opt
   14                | iomodifier_opt
   15                | /* empty */

   16 pipe_list: pipe_list PIPE command_and_args
   17          | command_and_args
   18          | /* empty */

   19 iomodifier_opt: GREAT WORD
   20               | LESS WORD
   21               | GREATGREAT WORD
   22               | GREATAMPERSAND WORD
   23               | GREATGREATAMPERSAND WORD

   24 background_opt: AMPERSAND


Terminals, with rules where they appear

$end (0) 0
error (256) 7
WORD (258) 11 12 19 20 21 22 23
NOTOKEN (259)
GREAT (260) 19
NEWLINE (261) 5 6 7
PIPE (262) 16
LESS (263) 20
AMPERSAND (264) 24
GREATGREAT (265) 21
GREATAMPERSAND (266) 22
GREATGREATAMPERSAND (267) 23


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
goal (14)
    on left: 1, on right: 0
commands (15)
    on left: 2 3, on right: 1 3
command (16)
    on left: 4, on right: 2 3
simple_command (17)
    on left: 5 6 7, on right: 4
command_and_args (18)
    on left: 8, on right: 16 17
argument_list (19)
    on left: 9 10, on right: 8 9
argument (20)
    on left: 11, on right: 9
command_word (21)
    on left: 12, on right: 8
iomodifier_list (22)
    on left: 13 14 15, on right: 5 13
pipe_list (23)
    on left: 16 17 18, on right: 5 16
iomodifier_opt (24)
    on left: 19 20 21 22 23, on right: 13 14
background_opt (25)
    on left: 24, on right: 5


State 0

    0 $accept: . goal $end

    error    shift, and go to state 1
    WORD     shift, and go to state 2
    NEWLINE  shift, and go to state 3

    GREAT                reduce using rule 18 (pipe_list)
    PIPE                 reduce using rule 18 (pipe_list)
    LESS                 reduce using rule 18 (pipe_list)
    AMPERSAND            reduce using rule 18 (pipe_list)
    GREATGREAT           reduce using rule 18 (pipe_list)
    GREATAMPERSAND       reduce using rule 18 (pipe_list)
    GREATGREATAMPERSAND  reduce using rule 18 (pipe_list)

    goal              go to state 4
    commands          go to state 5
    command           go to state 6
    simple_command    go to state 7
    command_and_args  go to state 8
    command_word      go to state 9
    pipe_list         go to state 10


State 1

    7 simple_command: error . NEWLINE

    NEWLINE  shift, and go to state 11


State 2

   12 command_word: WORD .

    $default  reduce using rule 12 (command_word)


State 3

    6 simple_command: NEWLINE .

    $default  reduce using rule 6 (simple_command)


State 4

    0 $accept: goal . $end

    $end  shift, and go to state 12


State 5

    1 goal: commands .
    3 commands: commands . command

    error    shift, and go to state 1
    WORD     shift, and go to state 2
    NEWLINE  shift, and go to state 3

    $end                 reduce using rule 1 (goal)
    GREAT                reduce using rule 18 (pipe_list)
    PIPE                 reduce using rule 18 (pipe_list)
    LESS                 reduce using rule 18 (pipe_list)
    AMPERSAND            reduce using rule 18 (pipe_list)
    GREATGREAT           reduce using rule 18 (pipe_list)
    GREATAMPERSAND       reduce using rule 18 (pipe_list)
    GREATGREATAMPERSAND  reduce using rule 18 (pipe_list)

    command           go to state 13
    simple_command    go to state 7
    command_and_args  go to state 8
    command_word      go to state 9
    pipe_list         go to state 10


State 6

    2 commands: command .

    $default  reduce using rule 2 (commands)


State 7

    4 command: simple_command .

    $default  reduce using rule 4 (command)


State 8

   17 pipe_list: command_and_args .

    $default  reduce using rule 17 (pipe_list)


State 9

    8 command_and_args: command_word . argument_list

    $default  reduce using rule 10 (argument_list)

    argument_list  go to state 14


State 10

    5 simple_command: pipe_list . iomodifier_list background_opt NEWLINE
   16 pipe_list: pipe_list . PIPE command_and_args

    GREAT                shift, and go to state 15
    PIPE                 shift, and go to state 16
    LESS                 shift, and go to state 17
    GREATGREAT           shift, and go to state 18
    GREATAMPERSAND       shift, and go to state 19
    GREATGREATAMPERSAND  shift, and go to state 20

    GREAT                [reduce using rule 15 (iomodifier_list)]
    LESS                 [reduce using rule 15 (iomodifier_list)]
    GREATGREAT           [reduce using rule 15 (iomodifier_list)]
    GREATAMPERSAND       [reduce using rule 15 (iomodifier_list)]
    GREATGREATAMPERSAND  [reduce using rule 15 (iomodifier_list)]
    $default             reduce using rule 15 (iomodifier_list)

    iomodifier_list  go to state 21
    iomodifier_opt   go to state 22


State 11

    7 simple_command: error NEWLINE .

    $default  reduce using rule 7 (simple_command)


State 12

    0 $accept: goal $end .

    $default  accept


State 13

    3 commands: commands command .

    $default  reduce using rule 3 (commands)


State 14

    8 command_and_args: command_word argument_list .
    9 argument_list: argument_list . argument

    WORD  shift, and go to state 23

    $default  reduce using rule 8 (command_and_args)

    argument  go to state 24


State 15

   19 iomodifier_opt: GREAT . WORD

    WORD  shift, and go to state 25


State 16

   16 pipe_list: pipe_list PIPE . command_and_args

    WORD  shift, and go to state 2

    command_and_args  go to state 26
    command_word      go to state 9


State 17

   20 iomodifier_opt: LESS . WORD

    WORD  shift, and go to state 27


State 18

   21 iomodifier_opt: GREATGREAT . WORD

    WORD  shift, and go to state 28


State 19

   22 iomodifier_opt: GREATAMPERSAND . WORD

    WORD  shift, and go to state 29


State 20

   23 iomodifier_opt: GREATGREATAMPERSAND . WORD

    WORD  shift, and go to state 30


State 21

    5 simple_command: pipe_list iomodifier_list . background_opt NEWLINE
   13 iomodifier_list: iomodifier_list . iomodifier_opt

    GREAT                shift, and go to state 15
    LESS                 shift, and go to state 17
    AMPERSAND            shift, and go to state 31
    GREATGREAT           shift, and go to state 18
    GREATAMPERSAND       shift, and go to state 19
    GREATGREATAMPERSAND  shift, and go to state 20

    iomodifier_opt  go to state 32
    background_opt  go to state 33


State 22

   14 iomodifier_list: iomodifier_opt .

    $default  reduce using rule 14 (iomodifier_list)


State 23

   11 argument: WORD .

    $default  reduce using rule 11 (argument)


State 24

    9 argument_list: argument_list argument .

    $default  reduce using rule 9 (argument_list)


State 25

   19 iomodifier_opt: GREAT WORD .

    $default  reduce using rule 19 (iomodifier_opt)


State 26

   16 pipe_list: pipe_list PIPE command_and_args .

    $default  reduce using rule 16 (pipe_list)


State 27

   20 iomodifier_opt: LESS WORD .

    $default  reduce using rule 20 (iomodifier_opt)


State 28

   21 iomodifier_opt: GREATGREAT WORD .

    $default  reduce using rule 21 (iomodifier_opt)


State 29

   22 iomodifier_opt: GREATAMPERSAND WORD .

    $default  reduce using rule 22 (iomodifier_opt)


State 30

   23 iomodifier_opt: GREATGREATAMPERSAND WORD .

    $default  reduce using rule 23 (iomodifier_opt)


State 31

   24 background_opt: AMPERSAND .

    $default  reduce using rule 24 (background_opt)


State 32

   13 iomodifier_list: iomodifier_list iomodifier_opt .

    $default  reduce using rule 13 (iomodifier_list)


State 33

    5 simple_command: pipe_list iomodifier_list background_opt . NEWLINE

    NEWLINE  shift, and go to state 34


State 34

    5 simple_command: pipe_list iomodifier_list background_opt NEWLINE .

    $default  reduce using rule 5 (simple_command)
